# combined_imbvs

./: README.md  README.md~
iai_kinect2-master/kinect2_bridge/data/003722754847/: calib_color.yaml  calib_color.yaml~  calib_depth.yaml  calib_ir.yaml  calib_pose.yaml
iai_kinect2-master/kinect2_bridge/data/011296264147/: calib_color.yaml  calib_depth.yaml  calib_ir.yaml  calib_pose.yaml
iai_kinect2-master/kinect2_bridge/data/old/003722754847/: calib_color.yaml  calib_depth.yaml  calib_ir.yaml  calib_pose.yaml
iai_kinect2-master/kinect2_bridge/launch/: kinect2_bridge_k1.launch  kinect2_bridge_k2.launch
imbvs_with_obstacles_avoidance/: .gitignore  CMakeLists.txt  README.md  package.xml  rosdoc.yaml
imbvs_with_obstacles_avoidance/include/imbvs_with_obstacles_avoidance/: imbvs_with_obstacles_avoidance.h
imbvs_with_obstacles_avoidance/include/utils/: pseudo_inversion.h  trajectrory_splines.h
imbvs_with_obstacles_avoidance/launch/: imbvs_with_obstacles_avodance.launch
imbvs_with_obstacles_avoidance/msg/: ObsData.msg  PoseRPY.msg  VisFeature.msg  VisualServoing.msg
imbvs_with_obstacles_avoidance/nodes/: imbvs_with_obstacles_avoidance_node.cpp
imbvs_with_obstacles_avoidance/src/: imbvs_with_obstacles_avoidance.cpp  imbvs_with_obstacles_avoidance.cpp~
imbvs_with_obstacles_avoidance/srv/: SetGama.srv
kinect_fusion/: .gitignore  CMakeLists.txt  README.md  README.md.autosave  package.xml  rosdoc.yaml
kinect_fusion/include/kinect_fusion/: kinect_fusion.h
kinect_fusion/launch/: hri_kinect_fusion.launch  ics_kinect_fusion.launch  kinect_fusion (copy).launch  kinect_fusion.launch
kinect_fusion/nodes/: kinect_fusion_node.cpp
kinect_fusion/src/: kinect_fusion.cpp
kinect_fusion/srv/: SetTask.srv
kuka-lwr/: .gitignore  README.md
kuka-lwr/hri_lwr/: README.md
kuka-lwr/hri_lwr/hri_lwr/: CMakeLists.txt  package.xml
kuka-lwr/hri_lwr/hri_lwr_launch/: CMakeLists.txt  package.xml
kuka-lwr/hri_lwr/hri_lwr_launch/launch/: Clouds.rviz  hri_lwr.launch  obstacles_only.rviz  rviz_config.rviz
kuka-lwr/hri_lwr/hri_lwr_setup/: CMakeLists.txt  package.xml
kuka-lwr/hri_lwr/hri_lwr_setup/config/: 980067-FRI-Driver.init  controllers.yaml  hw_interface.yaml  load_start_position.yaml  t1_joint_limits.yaml
kuka-lwr/hri_lwr/hri_lwr_setup/enviroment/: hri_lwr_enviroment.urdf.xacro
kuka-lwr/ics_lwr/: README.md
kuka-lwr/ics_lwr/ics_lwr/: CMakeLists.txt  package.xml
kuka-lwr/ics_lwr/ics_lwr_launch/: CMakeLists.txt  package.xml
kuka-lwr/ics_lwr/ics_lwr_launch/launch/: Clouds.rviz  brick_pick_and_place.launch  hri_lwr.launch  ics_lwr.launch  rviz_config.rviz
kuka-lwr/ics_lwr/ics_lwr_setup/: CMakeLists.txt  package.xml
kuka-lwr/ics_lwr/ics_lwr_setup/config/: 980067-FRI-Driver.init  controllers (copy).yaml  controllers.yaml~  hw_interface.yaml  load_start_position.yaml
kuka-lwr/ics_lwr/ics_lwr_setup/enviroment/: brick_pick_and_place_environment.urdf.xacro  ics_lwr_enviroment.urdf.xacro
kuka-lwr/kuka_lwr/: CMakeLists.txt  package.xml
kuka-lwr/lwr-traj-generator/: CMakeLists.txt  package.xml
kuka-lwr/lwr-traj-generator/include/lwr_traj_generator/: LwrTrajGenerator.h
kuka-lwr/lwr-traj-generator/msg/: dummyMsg.msg
kuka-lwr/lwr-traj-generator/nodes/: lwr_traj_generator_node.cpp
kuka-lwr/lwr-traj-generator/src/: LwrTrajGenerator.cpp
kuka-lwr/lwr_controllers/: CMakeLists.txt  README.md  lwr_controllers_plugins.xml  package.xml.autosave
kuka-lwr/lwr_controllers/include/lwr_controllers/: KinematicChainControllerBase.h  adaptive_torque_controller.h  computed_torque_controller.h  gravity_compensation.h  one_task_inverse_kinematics.h
kuka-lwr/lwr_controllers/msg/: PoseWithBaseAndTool.msg
kuka-lwr/lwr_controllers/src/: adaptive_torque_controller.cpp  computed_torque_controller.cpp  gravity_compensation.cpp  one_task_inverse_kinematics.cpp
kuka-lwr/lwr_description/: package.xml
kuka-lwr/lwr_description/meshes/collision/: arm_base_convex.stl  arm_segment_a_convex.stl  arm_segment_b_convex.stl  arm_segment_last_convex.stl  arm_wrist_convex.stl
kuka-lwr/lwr_description/meshes/visual/: base.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL  link_5.STL  link_6.STL  link_7.STL
kuka-lwr/lwr_description/model/: kuka_lwr.gazebo.xacro  kuka_lwr.urdf.xacro  kuka_materials.xacro
kuka-lwr/lwr_hw/: CMakeLists.txt  README.md  package.xml
kuka-lwr/lwr_hw/include/fri/: friremote.h
kuka-lwr/lwr_hw/include/lwr_hw/: lwr_hw.h  lwr_hw_fri.h  lwr_hw_fril.h  lwr_hw_gazebo.h
kuka-lwr/lwr_hw/krl/: ros_control.src
kuka-lwr/lwr_hw/launch/: lwr_hw.launch
kuka-lwr/lwr_hw/nodes/: lwr_hw_fri_node.cpp  lwr_hw_fril_node.cpp  lwr_hw_gazebo_plugin.cpp
kuka-lwr/lwr_hw/src/fri/: friremote.cpp  friudp.cpp
kuka-lwr/lwr_hw/src/lwr_hw/: lwr_hw.cpp  lwr_hw_fri.cpp  lwr_hw_fril.cpp  lwr_hw_gazebo.cpp
kuka-lwr/lwr_hw_interfaces/: CMakeLists.txt  package.xml
kuka-lwr/lwr_hw_interfaces/include/lwr_hw_interfaces/: joint_generic_command_interface.h  joint_generic_state_interface.h  joint_impedance_command_interface.h  joint_impedance_state_interface.h
obstacle_detector/: CMakeLists.txt  README.md  package.xml  rosdoc.yaml
obstacle_detector/config/: hri_parameters.yaml  ics_parameters.yaml
obstacle_detector/include/obstacle_detector/: obstacle_detector.h
obstacle_detector/launch/: obstacle_detector.launch
obstacle_detector/nodes/: obstacle_detector_node.cpp
obstacle_detector/src/: obstacle_detector.cpp
obstacle_detector/srv/: SetObstacleTrajectory.srv
usb_cam/: eye_in_hand_640x480.yaml  eye_in_hand_800x600.yaml
usb_cam/launch/: usb_cam-test.launch  usb_cam-test.launch~
visual_features_extractor/: CMakeLists.txt  README.md  package.xml  rosdoc.yaml
visual_features_extractor/include/visual_features_extractor/: visual_features_extractor.h
visual_features_extractor/launch/: visual_features_extractor.launch
visual_features_extractor/msg/: VisFeature.msg
visual_features_extractor/nodes/: visual_features_extractor_node.cpp
visual_features_extractor/src/: visual_features_extractor.cpp
visual_features_extractor/srv/: SetDepth.srv  SetTF.srv
(+4 files in other folders)
