<package format="2">
  <name>imbvs_with_obstacles_avoidance</name>
  <version>0.8.0</version>
  <description> The imbvs_with_obstacles_avoidance package</description>
  <maintainer email="dimitar.rakov@tum.de">Dimitar Rakov</maintainer>

  <license>TODO</license>

  <author>Dimitar Rakov</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>angles</depend>
  <depend>control_toolbox</depend> 
  <depend>realtime_tools</depend> 
  <depend>urdf</depend> 
  <depend>dynamic_reconfigure</depend>
  <depend>eigen</depend>
  <depend>kdl_parser</depend>
  <depend>message_runtime</depend>
  <depend>geometry_msgs</depend>


</package>
