<package format="2">
  <name>hri_lwr_launch</name>
  <version>0.1.0</version>
  <description>The hri_lwr_launch package to control everything that needs to launched.</description>

  <maintainer email="dimitar.rakov@tum.de">Dimitar Rakov</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>hri_lwr_setup</exec_depend>

  <export>
  </export>
</package>
