<package format="2">
  <name>ics_lwr</name>
  <version>0.1.0</version>
  <description>The ics_lwr package</description>

  <maintainer email="dimitar.rakov@tum.de">Dimitar Rakov</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- main meta package dependency -->
  <exec_depend>kuka_lwr</exec_depend>

  <!-- local packages -->
  <exec_depend>ics_lwr_setup</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
